# matador

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  seed.py  tailwind.config.js
.github/workflows/: ci.yml  pr-check.yaml  release.yml
docs/: architecture.md  index.md  integration.md  live-updates.md  security.md  templates.md  views.md
matador/: __init__.py  app.py  cli.py  service.py
matador/static/: app.css
matador/static/js/: app.js
matador/static/js/behaviors/: bulk-select.js  confirm.js  jobs-live.js  keys.js  row-controls.js  sidebar.js  theme.js  toast.js  tooltips.js
matador/templates/: base.html  error.html  index.html  job_detail.html  job_page.html  jobs.html  macros.html  queue.html  redis.html  schedulers.html  search_results.html  sidebar.html  sidebar_oob.html  tab_counts_oob.html  toast.html  workers.html  workers_list.html
matador/templates/layouts/: base.html
matador/templates/pages/: error.html  index.html
matador/templates/partials/: announce_oob.html  job_detail.html  job_page.html  jobs.html  metrics.html  names.html  queue.html  schedulers.html  search_results.html  sidebar.html  sidebar_oob.html  toast.html  workers.html  workers_list.html
scripts/: README.md  run.py  seed.py
styles/: input.css
tests/: conftest.py
tests/e2e/: conftest.py  test_actions.py  test_build_contract.py  test_bulk_select.py  test_detail.py  test_hotkeys_popover.py  test_job_page.py  test_keyboard.py  test_live.py  test_live_table.py  test_mobile_drawer.py  test_navigation.py  test_reduced_motion.py  test_search.py  test_theme.py  test_theme_default.py  test_tooltips.py  test_view_transitions.py  test_wcag_targets.py
tests/integration/: conftest.py  test_actions.py  test_announcements.py  test_clean.py  test_csrf.py  test_markup.py  test_metrics_panel.py  test_mount.py  test_redis_stats.py  test_routes.py  test_row_triage.py  test_search.py  test_stream.py
tests/unit/: test_chart.py  test_cli.py  test_filters.py  test_helpers.py  test_human_bytes.py  test_pagination.py  test_pretty_json.py  test_selected_from_url.py  test_service_transforms.py
